manuela/components/apps/iot-anomaly-detection/base/iot-anomaly-detection-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: anomaly-detection
  labels:
    component: serving
    app.kubernetes.io/part-of: manuela
spec:
  port:
    targetPort: http
  to:
    kind: Service
    name: anomaly-detection-predictor-anomaly-detection
  tls:
    insecureEdgeTerminationPolicy: Allow
    termination: edge
